k8s/applications/services/media/jellyfin/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - name: http
              containerPort: 8096
          securityContext:
            runAsUser: 920
            runAsGroup: 65520
            # Required for hardware transcode on /dev/dri
            privileged: true
          resources:
            requests:
              device.duck.moe/dri: "1"
            limits:
              device.duck.moe/dri: "1"
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 10
          volumeMounts:
          - name: config
            mountPath: /config
          - name: dev-dri
            mountPath: /dev/dri
          - name: transcode
            mountPath: /cache
          - name: data-downloads-duck-torrents-complete
            mountPath: /media/downloads/torrents
          - name: data-media-pvr
            mountPath: /media/pvr
          - name: data-media-video
            mountPath: /media/video
          - name: data-media-music
            mountPath: /media/music
          - name: data-mediavault-music
            mountPath: /media/mediavault/music
          - name: data-mediavault-video
            mountPath: /media/mediavault/video
      volumes:
      - name: dev-dri
        hostPath:
          path: /dev/dri
          type: Directory
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: transcode
        emptyDir: {}
      - name: data-downloads-duck-torrents-complete
        persistentVolumeClaim:
          claimName: plex-downloads-duck-torrents-complete
      - name: data-media-pvr
        persistentVolumeClaim:
          claimName: plex-media-pvr
      - name: data-media-video
        persistentVolumeClaim:
          claimName: plex-media-video
      - name: data-media-music
        persistentVolumeClaim:
          claimName: plex-media-music
      - name: data-mediavault-video
        persistentVolumeClaim:
          claimName: plex-mediavault-video
      - name: data-mediavault-music
        persistentVolumeClaim:
          claimName: plex-mediavault-music
