k8s/applications/services/media/jellyfin/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
  - name: http
    port: 8096
    targetPort: http
  selector:
    app: jellyfin
