k8s/applications/services/media/jellyfin/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: jellyfin
spec:
  rules:
  - host: jellyfin.home.theleachfamily.me.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: http
  tls:
  - hosts:
    - jellyfin.home.theleachfamily.me.uk
    secretName: jellyfin-cert
